src/objects/Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment__c</fullName>
        <label>Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pushed out of CQ</fullName>
                </value>
                <value>
                    <fullName>Account Transfer</fullName>
                </value>
                <value>
                    <fullName>Lost – Competitor</fullName>
                </value>
                <value>
                    <fullName>Lost – No Traction</fullName>
                </value>
                <value>
                    <fullName>Decreased Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyst_Field_Ops_Search__c</fullName>
        <description>Auto populates with the Analyst and the Field op&apos;s names to make them searchable.</description>
        <label>Analyst Field Ops Search</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <label># Attended</label>
        <summaryFilterItems>
            <field>Call_Participant_2__c.Attended__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Participant_2__c.Call_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Portfolio_Quality__c</fullName>
        <label>Average Portfolio Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipName>Call_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Primary_Field_Participant__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit (Legacy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Category__c</fullName>
        <label>Call Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Education/Services</fullName>
                </value>
                <value>
                    <fullName>Head Count</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Territory Management</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Details__c</fullName>
        <label>Call Details</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Sub__c</fullName>
        <label>Call Subtheme</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Theme__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Tools/Resources</fullName>
                </value>
                <value>
                    <fullName>Competitive Intel</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>v10</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Product Update</fullName>
                </value>
                <value>
                    <fullName>Tech Training Resources</fullName>
                </value>
                <value>
                    <fullName>Tech Support</fullName>
                </value>
                <value>
                    <fullName>ED/SV Training Resources</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Premium Support</fullName>
                </value>
                <value>
                    <fullName>Tacking on Education</fullName>
                </value>
                <value>
                    <fullName>SFDC Data Quality</fullName>
                </value>
                <value>
                    <fullName>Opportunity/Account Tactics</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Account Adjustments</fullName>
                </value>
                <value>
                    <fullName>Quotes</fullName>
                </value>
                <value>
                    <fullName>Complex Deals</fullName>
                </value>
                <value>
                    <fullName>Certifications</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Rennyson</fullName>
                </value>
                <value>
                    <fullName>Zolfaghari</fullName>
                </value>
                <value>
                    <fullName>Cook</fullName>
                </value>
                <value>
                    <fullName>Xeller</fullName>
                </value>
                <value>
                    <fullName>Klein</fullName>
                </value>
                <value>
                    <fullName>SFDC Data Integrity</fullName>
                </value>
                <value>
                    <fullName>SFDC Training</fullName>
                </value>
                <value>
                    <fullName>Marketing Needs</fullName>
                </value>
                <value>
                    <fullName>BDR Needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Theme__c</fullName>
        <label>Call Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Education/Services</fullName>
                </value>
                <value>
                    <fullName>Head Count</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Territory Management</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Static number to count unique records in summarized reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_of_Call__c</fullName>
        <label>Duration in Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Participant_Employee_Number__c</fullName>
        <formula>Primary_Field_Participant__r.EmployeeNumber</formula>
        <label>Field Participant Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Participant_Manager_Lvl_1__c</fullName>
        <formula>Primary_Field_Participant__r.Manager.Full_Name__c</formula>
        <label>Field Participant Manager (Lvl 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Problems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if there were language barrier issues with the call</description>
        <label>Language Problems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <inlineHelpText>Meeting if the the session took place in person. 
Web Call if the session was audio but online with the ability to share a presentation.
Audio Call if the session took place over the phone.
Video Call if the session took place F2F but online.</inlineHelpText>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Web Call</fullName>
                </value>
                <value>
                    <fullName>Audio Call</fullName>
                </value>
                <value>
                    <fullName>Video Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mins__c</fullName>
        <formula>VALUE(TEXT(Duration_of_Call__c))</formula>
        <label>Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_Number__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>Owner Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label># Participants</label>
        <summaryForeignKey>Call_Participant_2__c.Call_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Account that corresponds to the account of the partner executive. Will be autopopulated when a Partner Executive is selected.</description>
        <formula>Partner_Executive__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For GA only: Account that corresponds to the account of the partner executive. Will be auto-populated when a Partner Executive is selected.</inlineHelpText>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For GA only: Indicate the Partner Executive that participated on the call</description>
        <inlineHelpText>For GA only: Indicate the Partner Executive that participated on the call</inlineHelpText>
        <label>Partner Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Field_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter the name of the field participant the call is scheduled to be held with</description>
        <label>Primary Field Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Ops_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary Ops Participant who is holding the call and creating the log</description>
        <label>Primary Ops Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <formula>CASE(
     Rating__c,
     &quot;Detached&quot;, 1,
     &quot;Neutral&quot;, 2,
     &quot;Engaged&quot;, 3,
     0
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>• Detached: Participants were unprepared or veered off the call&apos;s agenda 
• Neutral: Nothing specific was discussed to move opportunities forward and no tasks were assigned 
• Engaged: Promoted stages or enhanced configs/offers and specific tasks create</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_not_occurring__c</fullName>
        <label>Reason for not occurring</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Actions__c</fullName>
        <inlineHelpText>Please provide justification for why the call was rated as Detached, Neutral, or Engaged as specified in the &apos;Rating&apos; field.</inlineHelpText>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this call rescheduled from its series time?</inlineHelpText>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Management_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if a Sales Director or Country Manager was the focus of the call</description>
        <inlineHelpText>ie if the call was an AP:SD or BD:CM the box would be checked</inlineHelpText>
        <label>Sales Management Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Period__c</fullName>
        <label>Sales Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY17 SP-01</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-02</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-03</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-04</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-05</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-06</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-07</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-08</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-09</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-10</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-11</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-12</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-13</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-14</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-15</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-16</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-17</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-18</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-19</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-20</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-21</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-22</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-23</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-24</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-25</fullName>
                </value>
                <value>
                    <fullName>FY17 SP-26</fullName>
                </value>
                <value>
                    <fullName>FY18 SP-01</fullName>
                </value>
                <value>
                    <fullName>FY18 SP-02</fullName>
                </value>
                <value>
                    <fullName>FY18 SP-03</fullName>
                </value>
                <value>
                    <fullName>FY18 SP-04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Hour__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Issues_With_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there were technical issues with the call</description>
        <inlineHelpText>Were there any technical issues, bridge problems, call drops etc</inlineHelpText>
        <label>Technical Issues With Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Plans</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Sales Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <description>Enter the type of Cadence called held</description>
        <inlineHelpText>Enter the type of Cadence called held</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-BD</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Stage_1_2_Opportunities_N4Q__c</fullName>
        <label>$ Value of Stage 1+2 Opportunities N4Q</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,
&quot;View&quot;, 
&quot;_top&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Opportunities_N4Q_with_Customers__c</fullName>
        <label># of Opportunities N4Q with Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Opportunities_N4Q_with_Prospects__c</fullName>
        <label># of Opportunities N4Q with Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Opportunities_Overdue_N4Q__c</fullName>
        <label># of Opportunities Overdue N4Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Session Log</label>
    <listViews>
        <fullName>X3_All_Call_Logs</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Call__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Date__c</columns>
        <columns>Scheduled_Hour__c</columns>
        <columns>Primary_Field_Participant__c</columns>
        <columns>Status__c</columns>
        <columns>Duration_of_Call__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>3 - All Call Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Session Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Methodology_required_if_Status_is_Complt</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
(
ISPICKVAL( Status__c ,&quot;Completed&quot;), 
ISBLANK(TEXT( Methodology__c )
)
)</errorConditionFormula>
        <errorMessage>Please select how the session took place from the Methodology drop down list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Call_Duration_for_Completed_Call</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),
ISPICKVAL(Duration_of_Call__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Duration_of_Call__c</errorDisplayField>
        <errorMessage>You must enter a Duration for all Completed calls.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Rating_and_Observations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    OR(
       ISBLANK(TEXT(Rating__c)),
       ISBLANK(Recommended_Actions__c)
      )
   )</errorConditionFormula>
        <errorMessage>Rating and Rating Observations must be completed in order to mark a Call Log as Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_for_BD_Calls</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
TEXT(Type_of_Call__c) = &quot;BD&quot;,
OR(
ISBLANK(Value_of_Stage_1_2_Opportunities_N4Q__c),
ISBLANK(of_Opportunities_N4Q_with_Customers__c),
ISBLANK(of_Opportunities_N4Q_with_Prospects__c ),
ISBLANK(of_Opportunities_Overdue_N4Q__c ), 
ISBLANK(Average_Portfolio_Quality__c )))</errorConditionFormula>
        <errorMessage>Please fill out the # or opportunities with customers and with prospects, the # of opportunities overdue, the average portfolio quality, and the $ value of stage 1+2 opportunities</errorMessage>
    </validationRules>
</CustomObject>